ExampleQASystem added, fixed pom.xml