@@ -1,30 +1,81 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.dice</groupId>
+  <groupId>org.dice-research</groupId>
   <artifactId>gerbilQABencmarkingTemplate</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>GerbilQA Benchmarking Template</name>
   <description>A template for QA systems to benchmark with GERBIL. </description>
+  
+  
   <pluginRepositories>
 		<pluginRepository>
 			<id>spring-releases</id>
 			<url>https://repo.spring.io/libs-release</url>
 		</pluginRepository>
-        <pluginRepository>
-            <id>repository.spring.release</id>
-            <name>Spring GA Repository</name>
-            <url>https://repo.spring.io/plugins-release/</url>
-        </pluginRepository>
+		<pluginRepository>
+        <id>spring-milestones</id>
+        <url>http://repo.spring.io/milestone</url>
+    </pluginRepository>
 	</pluginRepositories>
+  
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>1.5.9.RELEASE</version>
+				<configuration>
+					<systemProperties>
+						<JAVA_OPTS>-Xms415m -Xmx16G -XX:MaxPermSize=1G</JAVA_OPTS>
+					</systemProperties>
+					<mainClass>org.dice-research.WebApplication</mainClass>
+					<layout>JAR</layout>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						<configuration>
+							<classifier>bootable-with-spring</classifier>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
+			
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <version>3.1</version>
+			    <configuration>
+			        <source>1.8</source>
+			        <target>1.8</target>
+			    </configuration>
+			</plugin>
+			
 		</plugins>
 	</build>
+	
+	<dependencyManagement>
+    <dependencies>
+        <!-- Override Spring Data release train provided by Spring Boot -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-releasetrain</artifactId>
+            <version>Fowler-SR2</version>
+            <scope>import</scope>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-dependencies</artifactId>
+            <version>1.5.9.RELEASE</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+	</dependencyManagement>
+	
 	<repositories>
 	<repository>
 			<id>maven.aksw.internal</id>
@@ -36,6 +87,16 @@
 			<name>University Leipzig, AKSW Maven2 Repository</name>
 			<url>http://maven.aksw.org/archiva/repository/snapshots</url>
 	</repository>
+	<repository> 
+        <id>repository.spring.release</id> 
+        <name>Spring GA Repository</name> 
+        <url>http://repo.spring.io/release</url> 
+    </repository>
+	<repository>
+            <id>repository.spring.milestone</id>
+            <name>Spring Milestone Repository</name>
+            <url>https://repo.spring.io/milestone</url>
+    </repository>
 	</repositories>
 	<dependencies>
 	
@@ -50,7 +111,6 @@
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-web</artifactId>
-	    <version>5.0.2.RELEASE</version>
 	</dependency>
 	<dependency>
 	  <groupId>org.aksw.qa</groupId>
@@ -64,26 +124,17 @@
 	    <version>3.0-alpha-1</version>
 	    <scope>provided</scope>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
-	<dependency>
-	    <groupId>org.slf4j</groupId>
-	    <artifactId>slf4j-api</artifactId>
-	    <version>1.8.0-alpha2</version>
-	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-cmds -->
 	<dependency>
-	  <groupId>org.apache.commons</groupId>
-	  <artifactId>commons-lang3</artifactId>
-	  <version>3.3.2</version>
+	    <groupId>org.apache.jena</groupId>
+	    <artifactId>jena-cmds</artifactId>
+	    <version>3.4.0</version>
 	</dependency>
 	
-	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent -->
 	<dependency>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-parent</artifactId>
-	    <version>2.0.0</version>
-	    <type>pom</type>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-core</artifactId>
 	</dependency>
 	
 	
@@ -91,19 +142,13 @@
 	<dependency>
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-web</artifactId>
-	    <type>jar</type>
-	    <version>2.0.0</version>
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat -->
 	<dependency>
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-tomcat</artifactId>
-	    <version>2.0.0</version>
-	</dependency>
-	
-	
-	 
+	</dependency> 
 	
 	
 	<dependency>
@@ -113,6 +158,10 @@
 		<version>3.6.0</version>
 	</dependency>
 	</dependencies>
+	
+	<properties>
+    	<java.version>1.8</java.version>
+	</properties>
 	
 	
 </project>
